search highlighting. fixed css bug with search categories not right aligned anymore. someone needs to put the inline highlight js to appropriate place

--- a/sugarcrm/themes/Sugar/css/style.css
+++ b/sugarcrm/themes/Sugar/css/style.css
@@ -5997,10 +5997,9 @@ margin-left:10px;
 #sugar_spot_search_results section .resultTitle{
     float:left;
     color:#999;
-    width:50px;
+    width:70px;
     text-align:right;
     margin-top:-11px;
-    margin-left:10px;
 }
 
 #sugar_spot_search_results a.resultAll {
@@ -6030,10 +6029,10 @@ margin-left:10px;
     width:175px;
     margin-top:-14px;
     line-height:20px;
-    padding:0 0 25px 15px;
+    padding:0 0 25px 10px;
     float:left;
     border-left: 1px solid #aaa;
-    margin-left:20px;
+    margin-left:15px;
 }
 
 #sugar_spot_search_results section ul li {
@@ -6049,6 +6048,8 @@ margin-left:10px;
 #sugar_spot_search_results section ul li a:hover {
     text-decoration:underline;
 }
+
+.highlight { background-color: yellow }
 
 .dcmenuDivider {
 	background-image:url('../../../../index.php?entryPoint=getImage&imageName=dcMenuDivider.png');
